<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="32dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/main_label"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/app_name" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/welcome_str" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:id="@+id/seesights"
            android:layout_width="240dp"
            android:layout_height="37dp"
            android:text="@string/seesights_home" />

        <TextView
            android:id="@+id/seesights_text"
            android:layout_width="235dp"
            android:layout_height="37dp"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:id="@+id/points"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/points_home" />

        <TextView
            android:id="@+id/points_text"
            android:layout_width="233dp"
            android:layout_height="36dp"
            android:text="" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="31dp">

        <TextView
            android:id="@+id/lastplace"
            android:layout_width="241dp"
            android:layout_height="32dp"
            android:text="@string/lastplace_home" />

        <TextView
            android:id="@+id/lastplace_text"
            android:layout_width="232dp"
            android:layout_height="31dp"
            android:text="" />


    </TableRow>
</LinearLayout>